--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,14 +1,14 @@
-numpy
-scipy
+numpy==1.23.3
+scipy==1.10.0
 petsc4py
-matplotlib
+matplotlib==3.10.3
 qmcpy
-mpi4py
-gif
-seaborn
-pyvista
-pythreejs
-cmcrameri
-dill
-pathos
-h5py
+mpi4py==3.1.4
+gif==23.3.0
+seaborn==0.13.2
+pyvista==0.44.1
+pythreejs==2.4.2
+cmcrameri==1.9
+dill==0.4.0
+pathos==0.3.4
+h5py==3.13.0
